force landscape mode

--- a/app/src/main/res/layout/activity_camera_preview_main.xml
+++ b/app/src/main/res/layout/activity_camera_preview_main.xml
@@ -18,6 +18,7 @@ android:baselineAligned="false">
         <org.opencv.android.JavaCameraView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
+            android:layout_weight="0.5"
             android:visibility="gone"
             android:id="@+id/activity_java_surface_view"
             opencv:show_fps="true"
