--- a/app/src/main/res/layout/activity_camera_preview_main.xml
+++ b/app/src/main/res/layout/activity_camera_preview_main.xml
@@ -9,15 +9,14 @@ android:paddingBottom="@dimen/activity_vertical_margin"
 tools:context=".CameraPreviewMain"
 android:baselineAligned="false"
 android:orientation="horizontal"
-android:weightSum="100"
     >
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:opencv="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="70">
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="0.2">
 
         <org.opencv.android.JavaCameraView
             android:layout_width="fill_parent"
@@ -29,19 +28,40 @@ android:weightSum="100"
 
     </LinearLayout>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:opencv="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="30">
+
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:layout_weight="0.8">
 
         <Button
-            android:layout_width="wrap_content"
+            android:id="@+id/button_next"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="BUTTON" />
-    </LinearLayout>
+            android:layout_marginTop="10dp"
+            android:text="Next" />
 
+        <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/honey" />
+
+        <Button
+            android:id="@+id/Button_prev"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Prev" />
+
+        <Button
+            android:id="@+id/Button_capture"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Capture" />
+
+    </LinearLayout>
 
 </LinearLayout>
