--- a/app/src/main/res/layout/activity_camera_preview_main.xml
+++ b/app/src/main/res/layout/activity_camera_preview_main.xml
@@ -41,7 +41,8 @@ android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Next" />
+            android:text="Next"
+            android:enabled="false" />
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -61,14 +62,16 @@ android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Prev" />
+            android:text="Prev"
+            android:enabled="false" />
 
         <Button
             android:id="@+id/Button_select_folder"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Select Folder" />
+            android:text="Select Folder"
+            android:enabled="false" />
 
         <Button
             android:id="@+id/Button_capture"
